--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
     <name>EasyFun</name>
     <packaging>pom</packaging>
     <modules>
-
     </modules>
     <properties>
         <java.version>21</java.version>
@@ -18,36 +17,34 @@
         <spring-boot.version>3.4.13</spring-boot.version>
         <spring-cloud.version>2024.0.3</spring-cloud.version>
         <spring-cloud-alibaba.version>2025.0.0.0</spring-cloud-alibaba.version>
-        <!-- 数据库与存储 -->
-        <mysql.version>8.0.33</mysql.version>
-<!--        <minio.version>8.5.7</minio.version>-->
-        <!-- 搜索引擎 -->
-<!--        <elasticsearch.version>7.17.16</elasticsearch.version>-->
-        <!-- 消息队列 -->
-        <rabbitmq.version>3.1.0</rabbitmq.version>
-        <!-- 分布式事务 -->
-<!--        <seata.version>1.7.1</seata.version>-->
-        <!-- JWT 认证 -->
-        <jjwt.version>0.12.3</jjwt.version>
-        <!-- 网络通信 -->
-<!--        <netty.version>4.1.101.Final</netty.version>-->
-        <!-- 服务治理与监控 -->
-<!--        <sentinel.version>1.8.6</sentinel.version>-->
-<!--        <prometheus.version>0.16.0</prometheus.version>-->
-<!--        <skywalking.version>8.16.0</skywalking.version>-->
+        <!--        &lt;!&ndash; 数据库与存储 &ndash;&gt;-->
+        <!--        <mysql.version>8.0.33</mysql.version>-->
+        <!--        &lt;!&ndash; 消息队列 &ndash;&gt;-->
+        <!--        <rabbitmq.version>3.1.0</rabbitmq.version>-->
+        <!--        &lt;!&ndash; JWT 认证 &ndash;&gt;-->
+        <!--        <jjwt.version>0.12.3</jjwt.version>-->
         <!-- 工具库 -->
         <lombok.version>1.18.30</lombok.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
-        <jackson.version>2.15.3</jackson.version>
-        <commons-lang3.version>3.14.0</commons-lang3.version>
-        <commons-collections4.version>4.4</commons-collections4.version>
-        <commons-io.version>2.15.1</commons-io.version>
-        <commons-codec.version>1.16.0</commons-codec.version>
-        <commons-beanutils.version>1.9.4</commons-beanutils.version>
-        <commons-text.version>1.10.0</commons-text.version>
+        <!--        <jackson.version>2.15.3</jackson.version>-->
+        <!--        <commons-lang3.version>3.14.0</commons-lang3.version>-->
+        <!--        <commons-collections4.version>4.4</commons-collections4.version>-->
+        <!--        <commons-io.version>2.15.1</commons-io.version>-->
+        <!--        <commons-codec.version>1.16.0</commons-codec.version>-->
+        <!--        <commons-beanutils.version>1.9.4</commons-beanutils.version>-->
+        <!--        <commons-text.version>1.10.0</commons-text.version>-->
     </properties>
     <dependencyManagement>
         <dependencies>
+            <!-- Spring Boot 依赖库 -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-parent</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
             <!-- Spring Boot 依赖管理 -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -75,92 +72,12 @@
                 <scope>import</scope>
             </dependency>
 
-            <!-- MySQL -->
-            <dependency>
-                <groupId>com.mysql</groupId>
-                <artifactId>mysql-connector-j</artifactId>
-                <version>${mysql.version}</version>
-            </dependency>
-
-            <!-- RabbitMQ -->
-            <dependency>
-                <groupId>org.springframework.amqp</groupId>
-                <artifactId>spring-rabbit</artifactId>
-                <version>${rabbitmq.version}</version>
-            </dependency>
-
-            <!-- JWT -->
-            <dependency>
-                <groupId>io.jsonwebtoken</groupId>
-                <artifactId>jjwt-api</artifactId>
-                <version>${jjwt.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.jsonwebtoken</groupId>
-                <artifactId>jjwt-impl</artifactId>
-                <version>${jjwt.version}</version>
-                <scope>runtime</scope>
-            </dependency>
-            <dependency>
-                <groupId>io.jsonwebtoken</groupId>
-                <artifactId>jjwt-jackson</artifactId>
-                <version>${jjwt.version}</version>
-                <scope>runtime</scope>
-            </dependency>
-
-            <!-- 工具库 -->
+            <!-- 工具类 -->
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.mapstruct</groupId>
-                <artifactId>mapstruct</artifactId>
-                <version>${mapstruct.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
-                <artifactId>jackson-databind</artifactId>
-                <version>${jackson.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-lang3</artifactId>
-                <version>${commons-lang3.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-collections4</artifactId>
-                <version>${commons-collections4.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>commons-io</groupId>
-                <artifactId>commons-io</artifactId>
-                <version>${commons-io.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>commons-codec</groupId>
-                <artifactId>commons-codec</artifactId>
-                <version>${commons-codec.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>commons-beanutils</groupId>
-                <artifactId>commons-beanutils</artifactId>
-                <version>${commons-beanutils.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-text</artifactId>
-                <version>${commons-text.version}</version>
+                <scope>provided</scope>
             </dependency>
 
         </dependencies>
