创建网关微服务

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>ef-common</module>
+        <module>ef-gateway</module>
     </modules>
     <properties>
         <java.version>21</java.version>
