--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>ef-common</module>
         <module>ef-gateway</module>
+        <module>ef-user</module>
     </modules>
     <properties>
         <java.version>21</java.version>
