配置Nacos服务发现、配置中心和Gateway网关

--- a/ef-gateway/pom.xml
+++ b/ef-gateway/pom.xml
@@ -12,6 +12,29 @@
     <groupId>com.star.easyfun.gateway</groupId>
     <artifactId>ef-gateway</artifactId>
 
+    <dependencies>
+
+        <!-- Nacos 服务发现 -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+        <!-- Nacos 配置中心 -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+        <!-- Gateway 网关 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <!-- 仅声明插件，所有配置（包括注解处理器路径）都从父工程继承 -->
