为用户微服务配置依赖，并创建启动类和SpringBoot配置

--- a/ef-user/pom.xml
+++ b/ef-user/pom.xml
@@ -12,6 +12,26 @@
     <groupId>com.star.easyfun.user</groupId>
     <artifactId>ef-user</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+        <!-- Nacos 配置中心 -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <!-- 仅声明插件，所有配置（包括注解处理器路径）都从父工程继承 -->
