添加Web依赖，初始化授权微服务的启动类和SpringBoot配置

--- a/ef-authorization/pom.xml
+++ b/ef-authorization/pom.xml
@@ -28,6 +28,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        <!-- Spring Web依赖（授权服务器需要暴露HTTP接口，如/oauth2/token，必选） -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-oauth2-jose</artifactId>
