--- a/ef-gateway/src/main/resources/application.yaml
+++ b/ef-gateway/src/main/resources/application.yaml
@@ -3,11 +3,10 @@ server:
   # 网关端口，前端统一访问这个端口
   port: 8080
   servlet:
-    # 上下文路径
     context-path: /
 spring:
   application:
-    name: gateway-service # 网关服务名（注册到Nacos的名称）
+    name: gateway-service # 网关服务名
   cloud:
     nacos:
       discovery:
@@ -23,15 +22,20 @@ spring:
         password: ${spring.cloud.nacos.discovery.password}
     gateway:
       routes:
-        # 路由1：转发到用户服务（动态路由，基于服务名）
-        - id: user-service-route # 路由唯一ID（自定义，唯一即可）
-          uri: lb://user-service # 目标服务地址：lb=负载均衡，后面跟注册中心的服务名
-          predicates: # 路由断言（匹配规则，满足则转发）
-            - Path=/user/** # 路径匹配：所有/user开头的请求转发到user-service
-            - Method=GET,POST # 限制请求方法（可选）
-          filters: # 路由过滤器（对请求/响应做处理）
-            - StripPrefix=1 # 去除路径前缀1级：/user/get → /get（转发到后端服务）
-      # 2.2 常用功能配置
+        - id: authorization-service-route
+          uri: lb://authorization-service
+          order: 0
+          predicates:
+            - Path=/auth/**
+          filters:
+            - RewritePath=/auth/(?<segment>.*), /$\{segment}
+        - id: user-service-route
+          uri: lb://user-service
+          order: 1
+          predicates:
+              - Path=/user/**
+          filters:
+            - RewritePath=/user/(?<segment>.*), /$\{segment}
       globalcors:
         cors-configurations:
           '[/**]': # 对所有路径生效
@@ -50,6 +54,21 @@ spring:
 #      - nacos:ef-gateway-dev.yml?server-addr=${spring.cloud.nacos.config.server-addr}
       # 可选模式（推荐新手）：配置不存在也不报错，启动不受影响
       - optional:nacos:ef-gateway-dev.yaml?server-addr=${spring.cloud.nacos.config.server-addr}
+  data:
+    redis:
+      host: 192.168.150.105
+      port: 6379
+      username: easyfun
+      password: 12345678
+      database: 0
+      timeout: 10000ms
+      # Jedis连接池配置（pool2的核心参数）
+      jedis:
+        pool:
+          max-active: 20       # 连接池最大活跃连接数（推荐根据QPS调整，比如20-50）
+          max-idle: 10         # 连接池最大空闲连接数
+          min-idle: 5          # 连接池最小空闲连接数（避免频繁创建/销毁连接）
+          max-wait: 5000ms     # 获取连接的最大等待时间（超时会抛异常，避免无限等待）
 logging:
   level:
     org.springframework.cloud.gateway: DEBUG
